<resources>
    <string name="app_name">Pokédex2.0</string>
    <string name="empty_recyclerview">No Pokémon match your search!</string>
    <string name="searchbar_hint">Search Pokémon Name</string>
    <string name="submit">Submit</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="breeding">Breeding</string>
    <string name="gender">Gender</string>
    <string name="genderless">Genderless</string>
    <string name="abilities">Abilities</string>
    <string name="weak_to">Weak to</string>
    <string name="resistant_to">Resistant to</string>
    <string name="immune_to">Immune to</string>
    <string name="hidden">Hidden</string>
    <string name="game_description">Game Description</string>
    <string name="ability_effect">Ability Effect</string>
    <string name="nature">Nature</string>
    <string name="level">Level</string>
    <string name="learned_at">Learned at</string>
    <string name="learned_by">Learned by</string>
    <string name="category">Category</string>

    <string-array name="types">
        <item>Bug</item>
        <item>Dark</item>
        <item>Dragon</item>
        <item>Electric</item>
        <item>Fairy</item>
        <item>Fighting</item>
        <item>Fire</item>
        <item>Flying</item>
        <item>Ghost</item>
        <item>Grass</item>
        <item>Ground</item>
        <item>Ice</item>
        <item>Normal</item>
        <item>Poison</item>
        <item>Psychic</item>
        <item>Rock</item>
        <item>Steel</item>
        <item>Water</item>
    </string-array>

    <string-array name="stats">
        <item>HP</item>
        <item>Attack</item>
        <item>Defense</item>
        <item>Sp.Atk</item>
        <item>Sp.Def</item>
        <item>Speed</item>
    </string-array>

    <string-array name="natures">
        <item>Adamant</item>,
        <item>Bashful</item>,
        <item>Bold</item>,
        <item>Brave</item>,
        <item>Calm</item>,
        <item>Careful</item>,
        <item>Docile</item>,
        <item>Gentle</item>,
        <item>Hardy</item>,
        <item>Hasty</item>,
        <item>Impish</item>,
        <item>Jolly</item>,
        <item>Lax</item>,
        <item>Lonely</item>,
        <item>Mild</item>,
        <item>Modest</item>,
        <item>Naive</item>,
        <item>Naughty</item>,
        <item>Quiet</item>,
        <item>Quirky</item>,
        <item>Rash</item>,
        <item>Relaxed</item>,
        <item>Sassy</item>,
        <item>Serious</item>,
        <item>Timid</item>
    </string-array>
</resources>