<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="4dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/statContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <include
                    android:id="@+id/hp"
                    layout="@layout/single_base_stat" />

                <include
                    android:id="@+id/attack"
                    layout="@layout/single_base_stat" />

                <include
                    android:id="@+id/defence"
                    layout="@layout/single_base_stat" />

                <include
                    android:id="@+id/spArk"
                    layout="@layout/single_base_stat" />

                <include
                    android:id="@+id/spDef"
                    layout="@layout/single_base_stat" />

                <include
                    android:id="@+id/speed"
                    layout="@layout/single_base_stat" />

                <Button
                    android:id="@+id/calculateStats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="Calculate Stats"
                    android:textColor="@android:color/white" />

                <!--TextView
                    android:id="@+id/statsTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="@dimen/card_margin" /-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/card_margin"
                    android:paddingEnd="@dimen/card_margin"
                    android:paddingBottom="4dp"
                    android:text="@string/abilities"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ability1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Ability 1"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/ability2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:text="Ability 2"
                        android:textAllCaps="false"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hiddenAbility"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@drawable/hidden_ability_background_left"
                        android:gravity="center"
                        android:paddingStart="@dimen/card_margin"
                        android:paddingEnd="@dimen/card_margin"
                        android:text="@string/hidden"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/card_margin"
                    android:paddingEnd="@dimen/card_margin"
                    android:paddingBottom="12dp"
                    android:text="@string/weak_to"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weaknessRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/type_weakness_resistance" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/card_margin"
                    android:paddingEnd="@dimen/card_margin"
                    android:paddingBottom="12dp"
                    android:text="@string/resistant_to"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/resistanceRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/type_weakness_resistance" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/card_margin"
                    android:paddingEnd="@dimen/card_margin"
                    android:paddingBottom="12dp"
                    android:text="@string/immune_to"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/immunitiesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/type_weakness_resistance" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>